--- a/themes/sugar-dark/theme.conf
+++ b/themes/sugar-dark/theme.conf
@@ -1,6 +1,6 @@
 [General]
 
-Background="wallhaven-6o6orw.png"
+Background="wallhaven1.png"
 ## Must match the name of the image in the theme directory. Any standard image file format is allowed with transparency supported. (e.g. background.jpeg/illustration.GIF/Foto.png)
 
 ScaleImageCropped=true
